# ChangeLog for dev-perl/DateTime-Format-Strptime
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DateTime-Format-Strptime/ChangeLog,v 1.4 2009/05/05 06:53:05 tove Exp $

  05 May 2009; Torsten Veller <tove@gentoo.org>
  DateTime-Format-Strptime-1.0900.ebuild:
  Run tests and depend on >=dev-perl/DateTime-TimeZone-0.79. EAPI=2

  02 May 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-Format-Strptime-1.0800.ebuild:
  Cleanup

*DateTime-Format-Strptime-1.0900 (23 Feb 2009)

  23 Feb 2009; Robin H. Johnson <robbat2@gentoo.org>
  +DateTime-Format-Strptime-1.0900.ebuild:
  Version bump via perl-bump experimental tool.

*DateTime-Format-Strptime-1.0800 (09 Dec 2008)

  09 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +DateTime-Format-Strptime-1.0800.ebuild:
  Initial commit, dep for new dev-libs/OpenSRF-1.0.1
