@@ -1,0 +1,19 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Text-CSV/Attic/Text-CSV-1.12.ebuild,v 1.1 2009/05/16 14:38:21 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR="MAKAMAKA"
+inherit perl-module
+
+DESCRIPTION="Manipulate comma-separated value strings"
+
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE="test"
+
+RDEPEND=""
+DEPEND="test? ( dev-perl/Test-Pod )"
+
+SRC_TEST=do
