@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Text-CSV
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Text-CSV/ChangeLog,v 1.17 2009/05/02 10:24:21 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Text-CSV/ChangeLog,v 1.18 2009/05/16 14:38:21 tove Exp $
+
+*Text-CSV-1.12 (16 May 2009)
+
+  16 May 2009; Torsten Veller <tove@gentoo.org> +Text-CSV-1.12.ebuild:
+  Version bump
 
   02 May 2009; Torsten Veller <tove@gentoo.org> -Text-CSV-1.10.ebuild:
   Cleanup
