@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-Format-Strptime
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DateTime-Format-Strptime/ChangeLog,v 1.4 2009/05/05 06:53:05 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DateTime-Format-Strptime/ChangeLog,v 1.5 2009/05/16 14:34:18 tove Exp $
+
+*DateTime-Format-Strptime-1.0901 (16 May 2009)
+
+  16 May 2009; Torsten Veller <tove@gentoo.org>
+  +DateTime-Format-Strptime-1.0901.ebuild:
+  Version bump
 
   05 May 2009; Torsten Veller <tove@gentoo.org>
   DateTime-Format-Strptime-1.0900.ebuild:
